--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "choreographer": "*",
     "clutch": "*",
     "connect": "1.5.2",
-      "escort": "*",
-      "http-hash": "*",
+    "escort": "*",
+    "http-hash": "*",
     "journey": "*",
     "express": "*",
-      "light-router": "*",
-      "i40": "*"
+    "light-router": "*",
+    "i40": "*",
+    "find-my-way": "*"
   },
   "repository": {
     "type": "git",
